--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,3 +1,12 @@
 [lfs]
-    url = "http://localhost:8080/"
-
+#    url = "http://localhost:8080/"
+	url = "http://localhost:8081/repository/fresnel-data/info/lfs"
+	pushurl = "http://localhost:8081/repository/fresnel-data/info/lfs"
+	allowincompletepush = false
+	fetchrecentrefsdays = 0
+	fetchrecentremoterefs = false
+	fetchrecentcommitsdays = 1
+	fetchrecentalways = false
+	pruneoffsetdays = 0
+	#pruneremotetocheck = origin
+	#pruneverifyremotealways = true
